Massive Bug Fixes

--- a/WebApplicationCrud/Views/Home/ProductPanel.cshtml
+++ b/WebApplicationCrud/Views/Home/ProductPanel.cshtml
@@ -348,7 +348,7 @@
                         <span><img src="" class="rounded-circle" /></span>
                         <span style="font-weight:bold">@comment.Author</span>
                         <span style="font-style:italic">@comment.Created</span>
-                        <button id="@comment.Id" class="replyButton" onclick="SubCommentsCollapse(this.id)">
+                        <button style="position:relative;float:right" id="@comment.Id" class="replyButton" onclick="SubCommentsCollapse(this.id)">
                             <span><i class="fa fa-reply"></i> reply</span>
                         </button>
                         <p>
