--- a/WebApplicationCrud/wwwroot/css/Panel/AddProduct.css
+++ b/WebApplicationCrud/wwwroot/css/Panel/AddProduct.css
@@ -25,8 +25,14 @@
     padding:10px;
     margin-top:20px;
 }
-.UploadedImage{
-    display:inline-block;
-    width:150px;
-    height:200px;
+.UploadedImage {
+    display: inline-block;
+    width: 150px;
+    height: 200px;
+    overflow: hidden;
 }
+
+    .UploadedImage img {
+        width: auto;
+        height: auto;
+    }
